<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="top.timecaser.smarthome.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView15"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:text="@string/status3"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        android:layout_marginBottom="42dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:text="@string/status2"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/status1"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="10dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="10dp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:inputType=""
        android:text="26"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="33dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@+id/gtv"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="26dp"
        android:layout_marginRight="13dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/music"
        android:textSize="30sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="166dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="6dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@+id/glight"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fan"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@+id/gfan"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginRight="12dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/ac"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@+id/editText8"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/editText8"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="36dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:onClick="show"
        android:text="@string/confirm"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="31dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"

        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:onClick="goBack"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1" />

    <RadioGroup
        android:id="@+id/gtv"
        android:layout_width="145dp"
        android:layout_height="43dp"
        android:checkedButton="@+id/radioButton"
        android:orientation="horizontal"
        android:text="@string/gtv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        tools:layout_constraintLeft_creator="1">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/on1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="78dp"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/off1" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/gfan"
        android:layout_width="145dp"
        android:layout_height="43dp"
        android:orientation="horizontal"
        android:text="@string/gfan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/glight"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="25dp">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/on4"/>

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1.01"
            android:text="@string/off4" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/gmusic"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:checkedButton="@+id/radioButton13"
        android:orientation="horizontal"
        android:text="@string/gmusic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/glight"
        android:layout_marginTop="62dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="59dp"
        app:layout_constraintTop_toTopOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/on2" />

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/off2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:text="@string/status5"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/gfan"
        android:layout_marginBottom="33dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:text="@string/status4"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        android:layout_marginBottom="37dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="86dp"
        android:layout_height="0dp"
        android:text="@string/status1"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/gtv"
        app:layout_constraintTop_toTopOf="@+id/gtv" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/status"
        app:layout_constraintBottom_toTopOf="@+id/gtv"
        app:layout_constraintLeft_toRightOf="@+id/gtv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <RadioGroup
        android:id="@+id/glight"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:orientation="horizontal"
        android:text="@string/glight"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        android:layout_marginTop="56dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="63dp"
        app:layout_constraintTop_toTopOf="@+id/textView6">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/on3" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/off3" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
